mini-c-compiler/y.output
Terminals unused in grammar

   EOI
   DO
   SWITCH
   CASE
   DEFAULT
   DOT
   COLON
   STRING


Grammar

    0 $accept: st $end

    1 st: decl SEMI st
    2   | proto

    3 epsilon: %empty

    4 decl: type decl_list

    5 type: INT_TYPE
    6     | FLOAT_TYPE
    7     | CHAR_TYPE
    8     | INT_TYPE ptr
    9     | FLOAT_TYPE ptr
   10     | CHAR_TYPE ptr

   11 ptr: TIMES
   12    | TIMES ptr

   13 decl_list: ide_id_decl
   14          | ide_id_decl COMMA decl_list

   15 id: ID

   16 ide_id_decl: id
   17            | id br_list

   18 arr_index: LSQBRAC expression RSQBRAC

   19 br_list: arr_index
   20        | arr_index br_list

   21 proto_head: type id LP list_params RP

   22 proto: proto_head SEMI proto
   23      | st2

   24 func_head: type id LP list_params RP

   25 int_head: INT_TYPE MAIN LP RP

   26 st2: int_head OPEN_CURL s CLOSE_CURL
   27    | func_head func_body st2

   28 func_body: OPEN_CURL s CLOSE_CURL

   29 list_params: type ide_id_decl
   30            | type ide_id_decl COMMA list_params

   31 fis: INT
   32    | FLOAT
   33    | CHAR
   34    | MINUS INT

   35 arr_index_dyn: LSQBRAC expression RSQBRAC

   36 br_list_dyn: arr_index_dyn
   37            | arr_index_dyn br_list_dyn

   38 ide_id: id
   39       | id br_list_dyn

   40 ide_id_amp: id
   41           | id br_list_dyn

   42 ide_id_lhs: id
   43           | id br_list_dyn

   44 list_call_params: expression
   45                 | expression COMMA list_call_params

   46 s: epsilon
   47  | other_than_if s
   48  | mif s

   49 function_call: id LP list_call_params RP

   50 for_head: FOR LP ide_id_lhs EQ expression SEMI

   51 for_cond: for_head expression SEMI

   52 for_exp: for_cond expression RP

   53 for_stmnt: for_exp opc s CLOSE_CURL

   54 while_head: WHILE LP

   55 while_exp: while_head expression RP

   56 while_stmnt: while_exp opc s CLOSE_CURL

   57 ifexp: IF LP expression RP

   58 iftrue: ifexp opc s CLOSE_CURL

   59 mif: iftrue ELSE opc s CLOSE_CURL
   60    | iftrue

   61 opc: OPEN_CURL

   62 other_than_if: ptr ide_id_lhs EQ expression SEMI
   63              | ide_id_lhs EQ expression SEMI
   64              | CONTINUE SEMI
   65              | BREAK SEMI
   66              | while_stmnt
   67              | for_stmnt
   68              | opc s CLOSE_CURL
   69              | decl SEMI
   70              | expression SEMI
   71              | PRINT expression SEMI
   72              | PRINT ENDL SEMI
   73              | RETURN expression SEMI

   74 expression: expression_and AND_AND expression
   75           | expression_and OR_OR expression
   76           | expression_and

   77 expression_and: term EEQ expression_and
   78               | term NEQ expression_and
   79               | term

   80 term: factor
   81     | factor LEQ term
   82     | factor GRQ term
   83     | factor GR term
   84     | factor LE term

   85 factor: arithmetic
   86       | arithmetic MINUS factor

   87 arithmetic: multdiv
   88           | multdiv PLUS arithmetic

   89 multdiv: final
   90        | final TIMES multdiv
   91        | final DIV multdiv

   92 final: ptr ide_id
   93      | AMP ide_id_amp
   94      | ptr LP expression RP
   95      | type LP expression RP
   96      | ide_id
   97      | PLUSPLUS ide_id_lhs
   98      | MINUSMINUS ide_id_lhs
   99      | ide_id_lhs PLUSPLUS
  100      | ide_id_lhs MINUSMINUS
  101      | NOT LP expression RP
  102      | LP expression RP
  103      | fis
  104      | function_call


Terminals, with rules where they appear

$end (0) 0
error (256)
EOI (258)
SEMI (259) 1 22 50 51 62 63 64 65 69 70 71 72 73
MAIN (260) 25
PLUS (261) 88
TIMES (262) 11 12 90
LP (263) 21 24 25 49 50 54 57 94 95 101 102
RP (264) 21 24 25 49 52 55 57 94 95 101 102
MINUS (265) 34 86
DIV (266) 91
NEQ (267) 78
LE (268) 84
LEQ (269) 81
GR (270) 83
GRQ (271) 82
EQ (272) 50 62 63
IF (273) 57
OPEN_CURL (274) 26 28 61
CLOSE_CURL (275) 26 28 53 56 58 59 68
ELSE (276) 59
WHILE (277) 54
DO (278)
EEQ (279) 77
SWITCH (280)
CASE (281)
DEFAULT (282)
FOR (283) 50
BREAK (284) 65
CONTINUE (285) 64
LSQBRAC (286) 18 35
RSQBRAC (287) 18 35
DOT (288)
COLON (289)
COMMA (290) 14 30 45
PLUSPLUS (291) 97 99
MINUSMINUS (292) 98 100
RETURN (293) 73
NOT (294) 101
ID (295) 15
INT (296) 31 34
FLOAT (297) 32
STRING (298)
AMP (299) 93
INT_TYPE (300) 5 8 25
FLOAT_TYPE (301) 6 9
CHAR_TYPE (302) 7 10
CHAR (303) 33
AND_AND (304) 74
OR_OR (305) 75
PRINT (306) 71 72
ENDL (307) 72


Nonterminals, with rules where they appear

$accept (53)
    on left: 0
st (54)
    on left: 1 2, on right: 0 1
epsilon (55)
    on left: 3, on right: 46
decl (56)
    on left: 4, on right: 1 69
type (57)
    on left: 5 6 7 8 9 10, on right: 4 21 24 29 30 95
ptr (58)
    on left: 11 12, on right: 8 9 10 12 62 92 94
decl_list (59)
    on left: 13 14, on right: 4 14
id (60)
    on left: 15, on right: 16 17 21 24 38 39 40 41 42 43 49
ide_id_decl (61)
    on left: 16 17, on right: 13 14 29 30
arr_index (62)
    on left: 18, on right: 19 20
br_list (63)
    on left: 19 20, on right: 17 20
proto_head (64)
    on left: 21, on right: 22
proto (65)
    on left: 22 23, on right: 2 22
func_head (66)
    on left: 24, on right: 27
int_head (67)
    on left: 25, on right: 26
st2 (68)
    on left: 26 27, on right: 23 27
func_body (69)
    on left: 28, on right: 27
list_params (70)
    on left: 29 30, on right: 21 24 30
fis (71)
    on left: 31 32 33 34, on right: 103
arr_index_dyn (72)
    on left: 35, on right: 36 37
br_list_dyn (73)
    on left: 36 37, on right: 37 39 41 43
ide_id (74)
    on left: 38 39, on right: 92 96
ide_id_amp (75)
    on left: 40 41, on right: 93
ide_id_lhs (76)
    on left: 42 43, on right: 50 62 63 97 98 99 100
list_call_params (77)
    on left: 44 45, on right: 45 49
s (78)
    on left: 46 47 48, on right: 26 28 47 48 53 56 58 59 68
function_call (79)
    on left: 49, on right: 104
for_head (80)
    on left: 50, on right: 51
for_cond (81)
    on left: 51, on right: 52
for_exp (82)
    on left: 52, on right: 53
for_stmnt (83)
    on left: 53, on right: 67
while_head (84)
    on left: 54, on right: 55
while_exp (85)
    on left: 55, on right: 56
while_stmnt (86)
    on left: 56, on right: 66
ifexp (87)
    on left: 57, on right: 58
iftrue (88)
    on left: 58, on right: 59 60
mif (89)
    on left: 59 60, on right: 48
opc (90)
    on left: 61, on right: 53 56 58 59 68
other_than_if (91)
    on left: 62 63 64 65 66 67 68 69 70 71 72 73, on right: 47
expression (92)
    on left: 74 75 76, on right: 18 35 44 45 50 51 52 55 57 62 63 70
    71 73 74 75 94 95 101 102
expression_and (93)
    on left: 77 78 79, on right: 74 75 76 77 78
term (94)
    on left: 80 81 82 83 84, on right: 77 78 79 81 82 83 84
factor (95)
    on left: 85 86, on right: 80 81 82 83 84 86
arithmetic (96)
    on left: 87 88, on right: 85 86 88
multdiv (97)
    on left: 89 90 91, on right: 87 88 90 91
final (98)
    on left: 92 93 94 95 96 97 98 99 100 101 102 103 104, on right:
    89 90 91


State 0

    0 $accept: . st $end

    INT_TYPE    shift, and go to state 1
    FLOAT_TYPE  shift, and go to state 2
    CHAR_TYPE   shift, and go to state 3

    st          go to state 4
    decl        go to state 5
    type        go to state 6
    proto_head  go to state 7
    proto       go to state 8
    func_head   go to state 9
    int_head    go to state 10
    st2         go to state 11


State 1

    5 type: INT_TYPE .
    8     | INT_TYPE . ptr
   25 int_head: INT_TYPE . MAIN LP RP

    MAIN   shift, and go to state 12
    TIMES  shift, and go to state 13

    $default  reduce using rule 5 (type)

    ptr  go to state 14


State 2

    6 type: FLOAT_TYPE .
    9     | FLOAT_TYPE . ptr

    TIMES  shift, and go to state 13

    $default  reduce using rule 6 (type)

    ptr  go to state 15


State 3

    7 type: CHAR_TYPE .
   10     | CHAR_TYPE . ptr

    TIMES  shift, and go to state 13

    $default  reduce using rule 7 (type)

    ptr  go to state 16


State 4

    0 $accept: st . $end

    $end  shift, and go to state 17


State 5

    1 st: decl . SEMI st

    SEMI  shift, and go to state 18


State 6

    4 decl: type . decl_list
   21 proto_head: type . id LP list_params RP
   24 func_head: type . id LP list_params RP

    ID  shift, and go to state 19

    decl_list    go to state 20
    id           go to state 21
    ide_id_decl  go to state 22


State 7

   22 proto: proto_head . SEMI proto

    SEMI  shift, and go to state 23


State 8

    2 st: proto .

    $default  reduce using rule 2 (st)


State 9

   27 st2: func_head . func_body st2

    OPEN_CURL  shift, and go to state 24

    func_body  go to state 25


State 10

   26 st2: int_head . OPEN_CURL s CLOSE_CURL

    OPEN_CURL  shift, and go to state 26


State 11

   23 proto: st2 .

    $default  reduce using rule 23 (proto)


State 12

   25 int_head: INT_TYPE MAIN . LP RP

    LP  shift, and go to state 27


State 13

   11 ptr: TIMES .
   12    | TIMES . ptr

    TIMES  shift, and go to state 13

    $default  reduce using rule 11 (ptr)

    ptr  go to state 28


State 14

    8 type: INT_TYPE ptr .

    $default  reduce using rule 8 (type)


State 15

    9 type: FLOAT_TYPE ptr .

    $default  reduce using rule 9 (type)


State 16

   10 type: CHAR_TYPE ptr .

    $default  reduce using rule 10 (type)


State 17

    0 $accept: st $end .

    $default  accept


State 18

    1 st: decl SEMI . st

    INT_TYPE    shift, and go to state 1
    FLOAT_TYPE  shift, and go to state 2
    CHAR_TYPE   shift, and go to state 3

    st          go to state 29
    decl        go to state 5
    type        go to state 6
    proto_head  go to state 7
    proto       go to state 8
    func_head   go to state 9
    int_head    go to state 10
    st2         go to state 11


State 19

   15 id: ID .

    $default  reduce using rule 15 (id)


State 20

    4 decl: type decl_list .

    $default  reduce using rule 4 (decl)


State 21

   16 ide_id_decl: id .
   17            | id . br_list
   21 proto_head: type id . LP list_params RP
   24 func_head: type id . LP list_params RP

    LP       shift, and go to state 30
    LSQBRAC  shift, and go to state 31

    $default  reduce using rule 16 (ide_id_decl)

    arr_index  go to state 32
    br_list    go to state 33


State 22

   13 decl_list: ide_id_decl .
   14          | ide_id_decl . COMMA decl_list

    COMMA  shift, and go to state 34

    $default  reduce using rule 13 (decl_list)


State 23

   22 proto: proto_head SEMI . proto

    INT_TYPE    shift, and go to state 1
    FLOAT_TYPE  shift, and go to state 2
    CHAR_TYPE   shift, and go to state 3

    type        go to state 35
    proto_head  go to state 7
    proto       go to state 36
    func_head   go to state 9
    int_head    go to state 10
    st2         go to state 11


State 24

   28 func_body: OPEN_CURL . s CLOSE_CURL

    TIMES       shift, and go to state 13
    LP          shift, and go to state 37
    MINUS       shift, and go to state 38
    IF          shift, and go to state 39
    OPEN_CURL   shift, and go to state 40
    WHILE       shift, and go to state 41
    FOR         shift, and go to state 42
    BREAK       shift, and go to state 43
    CONTINUE    shift, and go to state 44
    PLUSPLUS    shift, and go to state 45
    MINUSMINUS  shift, and go to state 46
    RETURN      shift, and go to state 47
    NOT         shift, and go to state 48
    ID          shift, and go to state 19
    INT         shift, and go to state 49
    FLOAT       shift, and go to state 50
    AMP         shift, and go to state 51
    INT_TYPE    shift, and go to state 52
    FLOAT_TYPE  shift, and go to state 2
    CHAR_TYPE   shift, and go to state 3
    CHAR        shift, and go to state 53
    PRINT       shift, and go to state 54

    $default  reduce using rule 3 (epsilon)

    epsilon         go to state 55
    decl            go to state 56
    type            go to state 57
    ptr             go to state 58
    id              go to state 59
    fis             go to state 60
    ide_id          go to state 61
    ide_id_lhs      go to state 62
    s               go to state 63
    function_call   go to state 64
    for_head        go to state 65
    for_cond        go to state 66
    for_exp         go to state 67
    for_stmnt       go to state 68
    while_head      go to state 69
    while_exp       go to state 70
    while_stmnt     go to state 71
    ifexp           go to state 72
    iftrue          go to state 73
    mif             go to state 74
    opc             go to state 75
    other_than_if   go to state 76
    expression      go to state 77
    expression_and  go to state 78
    term            go to state 79
    factor          go to state 80
    arithmetic      go to state 81
    multdiv         go to state 82
    final           go to state 83


State 25

   27 st2: func_head func_body . st2

    INT_TYPE    shift, and go to state 1
    FLOAT_TYPE  shift, and go to state 2
    CHAR_TYPE   shift, and go to state 3

    type       go to state 84
    func_head  go to state 9
    int_head   go to state 10
    st2        go to state 85


State 26

   26 st2: int_head OPEN_CURL . s CLOSE_CURL

    TIMES       shift, and go to state 13
    LP          shift, and go to state 37
    MINUS       shift, and go to state 38
    IF          shift, and go to state 39
    OPEN_CURL   shift, and go to state 40
    WHILE       shift, and go to state 41
    FOR         shift, and go to state 42
    BREAK       shift, and go to state 43
    CONTINUE    shift, and go to state 44
    PLUSPLUS    shift, and go to state 45
    MINUSMINUS  shift, and go to state 46
    RETURN      shift, and go to state 47
    NOT         shift, and go to state 48
    ID          shift, and go to state 19
    INT         shift, and go to state 49
    FLOAT       shift, and go to state 50
    AMP         shift, and go to state 51
    INT_TYPE    shift, and go to state 52
    FLOAT_TYPE  shift, and go to state 2
    CHAR_TYPE   shift, and go to state 3
    CHAR        shift, and go to state 53
    PRINT       shift, and go to state 54

    $default  reduce using rule 3 (epsilon)

    epsilon         go to state 55
    decl            go to state 56
    type            go to state 57
    ptr             go to state 58
    id              go to state 59
    fis             go to state 60
    ide_id          go to state 61
    ide_id_lhs      go to state 62
    s               go to state 86
    function_call   go to state 64
    for_head        go to state 65
    for_cond        go to state 66
    for_exp         go to state 67
    for_stmnt       go to state 68
    while_head      go to state 69
    while_exp       go to state 70
    while_stmnt     go to state 71
    ifexp           go to state 72
    iftrue          go to state 73
    mif             go to state 74
    opc             go to state 75
    other_than_if   go to state 76
    expression      go to state 77
    expression_and  go to state 78
    term            go to state 79
    factor          go to state 80
    arithmetic      go to state 81
    multdiv         go to state 82
    final           go to state 83


State 27

   25 int_head: INT_TYPE MAIN LP . RP

    RP  shift, and go to state 87


State 28

   12 ptr: TIMES ptr .

    $default  reduce using rule 12 (ptr)


State 29

    1 st: decl SEMI st .

    $default  reduce using rule 1 (st)


State 30

   21 proto_head: type id LP . list_params RP
   24 func_head: type id LP . list_params RP

    INT_TYPE    shift, and go to state 52
    FLOAT_TYPE  shift, and go to state 2
    CHAR_TYPE   shift, and go to state 3

    type         go to state 88
    list_params  go to state 89


State 31

   18 arr_index: LSQBRAC . expression RSQBRAC

    TIMES       shift, and go to state 13
    LP          shift, and go to state 37
    MINUS       shift, and go to state 38
    PLUSPLUS    shift, and go to state 45
    MINUSMINUS  shift, and go to state 46
    NOT         shift, and go to state 48
    ID          shift, and go to state 19
    INT         shift, and go to state 49
    FLOAT       shift, and go to state 50
    AMP         shift, and go to state 51
    INT_TYPE    shift, and go to state 52
    FLOAT_TYPE  shift, and go to state 2
    CHAR_TYPE   shift, and go to state 3
    CHAR        shift, and go to state 53

    type            go to state 90
    ptr             go to state 91
    id              go to state 59
    fis             go to state 60
    ide_id          go to state 61
    ide_id_lhs      go to state 92
    function_call   go to state 64
    expression      go to state 93
    expression_and  go to state 78
    term            go to state 79
    factor          go to state 80
    arithmetic      go to state 81
    multdiv         go to state 82
    final           go to state 83


State 32

   19 br_list: arr_index .
   20        | arr_index . br_list

    LSQBRAC  shift, and go to state 31

    $default  reduce using rule 19 (br_list)

    arr_index  go to state 32
    br_list    go to state 94


State 33

   17 ide_id_decl: id br_list .

    $default  reduce using rule 17 (ide_id_decl)


State 34

   14 decl_list: ide_id_decl COMMA . decl_list

    ID  shift, and go to state 19

    decl_list    go to state 95
    id           go to state 96
    ide_id_decl  go to state 22


State 35

   21 proto_head: type . id LP list_params RP
   24 func_head: type . id LP list_params RP

    ID  shift, and go to state 19

    id  go to state 97


State 36

   22 proto: proto_head SEMI proto .

    $default  reduce using rule 22 (proto)


State 37

  102 final: LP . expression RP

    TIMES       shift, and go to state 13
    LP          shift, and go to state 37
    MINUS       shift, and go to state 38
    PLUSPLUS    shift, and go to state 45
    MINUSMINUS  shift, and go to state 46
    NOT         shift, and go to state 48
    ID          shift, and go to state 19
    INT         shift, and go to state 49
    FLOAT       shift, and go to state 50
    AMP         shift, and go to state 51
    INT_TYPE    shift, and go to state 52
    FLOAT_TYPE  shift, and go to state 2
    CHAR_TYPE   shift, and go to state 3
    CHAR        shift, and go to state 53

    type            go to state 90
    ptr             go to state 91
    id              go to state 59
    fis             go to state 60
    ide_id          go to state 61
    ide_id_lhs      go to state 92
    function_call   go to state 64
    expression      go to state 98
    expression_and  go to state 78
    term            go to state 79
    factor          go to state 80
    arithmetic      go to state 81
    multdiv         go to state 82
    final           go to state 83


State 38

   34 fis: MINUS . INT

    INT  shift, and go to state 99


State 39

   57 ifexp: IF . LP expression RP

    LP  shift, and go to state 100


State 40

   61 opc: OPEN_CURL .

    $default  reduce using rule 61 (opc)


State 41

   54 while_head: WHILE . LP

    LP  shift, and go to state 101


State 42

   50 for_head: FOR . LP ide_id_lhs EQ expression SEMI

    LP  shift, and go to state 102


State 43

   65 other_than_if: BREAK . SEMI

    SEMI  shift, and go to state 103


State 44

   64 other_than_if: CONTINUE . SEMI

    SEMI  shift, and go to state 104


State 45

   97 final: PLUSPLUS . ide_id_lhs

    ID  shift, and go to state 19

    id          go to state 105
    ide_id_lhs  go to state 106


State 46

   98 final: MINUSMINUS . ide_id_lhs

    ID  shift, and go to state 19

    id          go to state 105
    ide_id_lhs  go to state 107


State 47

   73 other_than_if: RETURN . expression SEMI

    TIMES       shift, and go to state 13
    LP          shift, and go to state 37
    MINUS       shift, and go to state 38
    PLUSPLUS    shift, and go to state 45
    MINUSMINUS  shift, and go to state 46
    NOT         shift, and go to state 48
    ID          shift, and go to state 19
    INT         shift, and go to state 49
    FLOAT       shift, and go to state 50
    AMP         shift, and go to state 51
    INT_TYPE    shift, and go to state 52
    FLOAT_TYPE  shift, and go to state 2
    CHAR_TYPE   shift, and go to state 3
    CHAR        shift, and go to state 53

    type            go to state 90
    ptr             go to state 91
    id              go to state 59
    fis             go to state 60
    ide_id          go to state 61
    ide_id_lhs      go to state 92
    function_call   go to state 64
    expression      go to state 108
    expression_and  go to state 78
    term            go to state 79
    factor          go to state 80
    arithmetic      go to state 81
    multdiv         go to state 82
    final           go to state 83


State 48

  101 final: NOT . LP expression RP

    LP  shift, and go to state 109


State 49

   31 fis: INT .

    $default  reduce using rule 31 (fis)


State 50

   32 fis: FLOAT .

    $default  reduce using rule 32 (fis)


State 51

   93 final: AMP . ide_id_amp

    ID  shift, and go to state 19

    id          go to state 110
    ide_id_amp  go to state 111


State 52

    5 type: INT_TYPE .
    8     | INT_TYPE . ptr

    TIMES  shift, and go to state 13

    $default  reduce using rule 5 (type)

    ptr  go to state 14


State 53

   33 fis: CHAR .

    $default  reduce using rule 33 (fis)


State 54

   71 other_than_if: PRINT . expression SEMI
   72              | PRINT . ENDL SEMI

    TIMES       shift, and go to state 13
    LP          shift, and go to state 37
    MINUS       shift, and go to state 38
    PLUSPLUS    shift, and go to state 45
    MINUSMINUS  shift, and go to state 46
    NOT         shift, and go to state 48
    ID          shift, and go to state 19
    INT         shift, and go to state 49
    FLOAT       shift, and go to state 50
    AMP         shift, and go to state 51
    INT_TYPE    shift, and go to state 52
    FLOAT_TYPE  shift, and go to state 2
    CHAR_TYPE   shift, and go to state 3
    CHAR        shift, and go to state 53
    ENDL        shift, and go to state 112

    type            go to state 90
    ptr             go to state 91
    id              go to state 59
    fis             go to state 60
    ide_id          go to state 61
    ide_id_lhs      go to state 92
    function_call   go to state 64
    expression      go to state 113
    expression_and  go to state 78
    term            go to state 79
    factor          go to state 80
    arithmetic      go to state 81
    multdiv         go to state 82
    final           go to state 83


State 55

   46 s: epsilon .

    $default  reduce using rule 46 (s)


State 56

   69 other_than_if: decl . SEMI

    SEMI  shift, and go to state 114


State 57

    4 decl: type . decl_list
   95 final: type . LP expression RP

    LP  shift, and go to state 115
    ID  shift, and go to state 19

    decl_list    go to state 20
    id           go to state 96
    ide_id_decl  go to state 22


State 58

   62 other_than_if: ptr . ide_id_lhs EQ expression SEMI
   92 final: ptr . ide_id
   94      | ptr . LP expression RP

    LP  shift, and go to state 116
    ID  shift, and go to state 19

    id          go to state 117
    ide_id      go to state 118
    ide_id_lhs  go to state 119


State 59

   38 ide_id: id .
   39       | id . br_list_dyn
   42 ide_id_lhs: id .
   43           | id . br_list_dyn
   49 function_call: id . LP list_call_params RP

    LP       shift, and go to state 120
    LSQBRAC  shift, and go to state 121

    EQ          reduce using rule 42 (ide_id_lhs)
    PLUSPLUS    reduce using rule 42 (ide_id_lhs)
    MINUSMINUS  reduce using rule 42 (ide_id_lhs)
    $default    reduce using rule 38 (ide_id)

    arr_index_dyn  go to state 122
    br_list_dyn    go to state 123


State 60

  103 final: fis .

    $default  reduce using rule 103 (final)


State 61

   96 final: ide_id .

    $default  reduce using rule 96 (final)


State 62

   63 other_than_if: ide_id_lhs . EQ expression SEMI
   99 final: ide_id_lhs . PLUSPLUS
  100      | ide_id_lhs . MINUSMINUS

    EQ          shift, and go to state 124
    PLUSPLUS    shift, and go to state 125
    MINUSMINUS  shift, and go to state 126


State 63

   28 func_body: OPEN_CURL s . CLOSE_CURL

    CLOSE_CURL  shift, and go to state 127


State 64

  104 final: function_call .

    $default  reduce using rule 104 (final)


State 65

   51 for_cond: for_head . expression SEMI

    TIMES       shift, and go to state 13
    LP          shift, and go to state 37
    MINUS       shift, and go to state 38
    PLUSPLUS    shift, and go to state 45
    MINUSMINUS  shift, and go to state 46
    NOT         shift, and go to state 48
    ID          shift, and go to state 19
    INT         shift, and go to state 49
    FLOAT       shift, and go to state 50
    AMP         shift, and go to state 51
    INT_TYPE    shift, and go to state 52
    FLOAT_TYPE  shift, and go to state 2
    CHAR_TYPE   shift, and go to state 3
    CHAR        shift, and go to state 53

    type            go to state 90
    ptr             go to state 91
    id              go to state 59
    fis             go to state 60
    ide_id          go to state 61
    ide_id_lhs      go to state 92
    function_call   go to state 64
    expression      go to state 128
    expression_and  go to state 78
    term            go to state 79
    factor          go to state 80
    arithmetic      go to state 81
    multdiv         go to state 82
    final           go to state 83


State 66

   52 for_exp: for_cond . expression RP

    TIMES       shift, and go to state 13
    LP          shift, and go to state 37
    MINUS       shift, and go to state 38
    PLUSPLUS    shift, and go to state 45
    MINUSMINUS  shift, and go to state 46
    NOT         shift, and go to state 48
    ID          shift, and go to state 19
    INT         shift, and go to state 49
    FLOAT       shift, and go to state 50
    AMP         shift, and go to state 51
    INT_TYPE    shift, and go to state 52
    FLOAT_TYPE  shift, and go to state 2
    CHAR_TYPE   shift, and go to state 3
    CHAR        shift, and go to state 53

    type            go to state 90
    ptr             go to state 91
    id              go to state 59
    fis             go to state 60
    ide_id          go to state 61
    ide_id_lhs      go to state 92
    function_call   go to state 64
    expression      go to state 129
    expression_and  go to state 78
    term            go to state 79
    factor          go to state 80
    arithmetic      go to state 81
    multdiv         go to state 82
    final           go to state 83


State 67

   53 for_stmnt: for_exp . opc s CLOSE_CURL

    OPEN_CURL  shift, and go to state 40

    opc  go to state 130


State 68

   67 other_than_if: for_stmnt .

    $default  reduce using rule 67 (other_than_if)


State 69

   55 while_exp: while_head . expression RP

    TIMES       shift, and go to state 13
    LP          shift, and go to state 37
    MINUS       shift, and go to state 38
    PLUSPLUS    shift, and go to state 45
    MINUSMINUS  shift, and go to state 46
    NOT         shift, and go to state 48
    ID          shift, and go to state 19
    INT         shift, and go to state 49
    FLOAT       shift, and go to state 50
    AMP         shift, and go to state 51
    INT_TYPE    shift, and go to state 52
    FLOAT_TYPE  shift, and go to state 2
    CHAR_TYPE   shift, and go to state 3
    CHAR        shift, and go to state 53

    type            go to state 90
    ptr             go to state 91
    id              go to state 59
    fis             go to state 60
    ide_id          go to state 61
    ide_id_lhs      go to state 92
    function_call   go to state 64
    expression      go to state 131
    expression_and  go to state 78
    term            go to state 79
    factor          go to state 80
    arithmetic      go to state 81
    multdiv         go to state 82
    final           go to state 83


State 70

   56 while_stmnt: while_exp . opc s CLOSE_CURL

    OPEN_CURL  shift, and go to state 40

    opc  go to state 132


State 71

   66 other_than_if: while_stmnt .

    $default  reduce using rule 66 (other_than_if)


State 72

   58 iftrue: ifexp . opc s CLOSE_CURL

    OPEN_CURL  shift, and go to state 40

    opc  go to state 133


State 73

   59 mif: iftrue . ELSE opc s CLOSE_CURL
   60    | iftrue .

    ELSE  shift, and go to state 134

    $default  reduce using rule 60 (mif)


State 74

   48 s: mif . s

    TIMES       shift, and go to state 13
    LP          shift, and go to state 37
    MINUS       shift, and go to state 38
    IF          shift, and go to state 39
    OPEN_CURL   shift, and go to state 40
    WHILE       shift, and go to state 41
    FOR         shift, and go to state 42
    BREAK       shift, and go to state 43
    CONTINUE    shift, and go to state 44
    PLUSPLUS    shift, and go to state 45
    MINUSMINUS  shift, and go to state 46
    RETURN      shift, and go to state 47
    NOT         shift, and go to state 48
    ID          shift, and go to state 19
    INT         shift, and go to state 49
    FLOAT       shift, and go to state 50
    AMP         shift, and go to state 51
    INT_TYPE    shift, and go to state 52
    FLOAT_TYPE  shift, and go to state 2
    CHAR_TYPE   shift, and go to state 3
    CHAR        shift, and go to state 53
    PRINT       shift, and go to state 54

    $default  reduce using rule 3 (epsilon)

    epsilon         go to state 55
    decl            go to state 56
    type            go to state 57
    ptr             go to state 58
    id              go to state 59
    fis             go to state 60
    ide_id          go to state 61
    ide_id_lhs      go to state 62
    s               go to state 135
    function_call   go to state 64
    for_head        go to state 65
    for_cond        go to state 66
    for_exp         go to state 67
    for_stmnt       go to state 68
    while_head      go to state 69
    while_exp       go to state 70
    while_stmnt     go to state 71
    ifexp           go to state 72
    iftrue          go to state 73
    mif             go to state 74
    opc             go to state 75
    other_than_if   go to state 76
    expression      go to state 77
    expression_and  go to state 78
    term            go to state 79
    factor          go to state 80
    arithmetic      go to state 81
    multdiv         go to state 82
    final           go to state 83


State 75

   68 other_than_if: opc . s CLOSE_CURL

    TIMES       shift, and go to state 13
    LP          shift, and go to state 37
    MINUS       shift, and go to state 38
    IF          shift, and go to state 39
    OPEN_CURL   shift, and go to state 40
    WHILE       shift, and go to state 41
    FOR         shift, and go to state 42
    BREAK       shift, and go to state 43
    CONTINUE    shift, and go to state 44
    PLUSPLUS    shift, and go to state 45
    MINUSMINUS  shift, and go to state 46
    RETURN      shift, and go to state 47
    NOT         shift, and go to state 48
    ID          shift, and go to state 19
    INT         shift, and go to state 49
    FLOAT       shift, and go to state 50
    AMP         shift, and go to state 51
    INT_TYPE    shift, and go to state 52
    FLOAT_TYPE  shift, and go to state 2
    CHAR_TYPE   shift, and go to state 3
    CHAR        shift, and go to state 53
    PRINT       shift, and go to state 54

    $default  reduce using rule 3 (epsilon)

    epsilon         go to state 55
    decl            go to state 56
    type            go to state 57
    ptr             go to state 58
    id              go to state 59
    fis             go to state 60
    ide_id          go to state 61
    ide_id_lhs      go to state 62
    s               go to state 136
    function_call   go to state 64
    for_head        go to state 65
    for_cond        go to state 66
    for_exp         go to state 67
    for_stmnt       go to state 68
    while_head      go to state 69
    while_exp       go to state 70
    while_stmnt     go to state 71
    ifexp           go to state 72
    iftrue          go to state 73
    mif             go to state 74
    opc             go to state 75
    other_than_if   go to state 76
    expression      go to state 77
    expression_and  go to state 78
    term            go to state 79
    factor          go to state 80
    arithmetic      go to state 81
    multdiv         go to state 82
    final           go to state 83


State 76

   47 s: other_than_if . s

    TIMES       shift, and go to state 13
    LP          shift, and go to state 37
    MINUS       shift, and go to state 38
    IF          shift, and go to state 39
    OPEN_CURL   shift, and go to state 40
    WHILE       shift, and go to state 41
    FOR         shift, and go to state 42
    BREAK       shift, and go to state 43
    CONTINUE    shift, and go to state 44
    PLUSPLUS    shift, and go to state 45
    MINUSMINUS  shift, and go to state 46
    RETURN      shift, and go to state 47
    NOT         shift, and go to state 48
    ID          shift, and go to state 19
    INT         shift, and go to state 49
    FLOAT       shift, and go to state 50
    AMP         shift, and go to state 51
    INT_TYPE    shift, and go to state 52
    FLOAT_TYPE  shift, and go to state 2
    CHAR_TYPE   shift, and go to state 3
    CHAR        shift, and go to state 53
    PRINT       shift, and go to state 54

    $default  reduce using rule 3 (epsilon)

    epsilon         go to state 55
    decl            go to state 56
    type            go to state 57
    ptr             go to state 58
    id              go to state 59
    fis             go to state 60
    ide_id          go to state 61
    ide_id_lhs      go to state 62
    s               go to state 137
    function_call   go to state 64
    for_head        go to state 65
    for_cond        go to state 66
    for_exp         go to state 67
    for_stmnt       go to state 68
    while_head      go to state 69
    while_exp       go to state 70
    while_stmnt     go to state 71
    ifexp           go to state 72
    iftrue          go to state 73
    mif             go to state 74
    opc             go to state 75
    other_than_if   go to state 76
    expression      go to state 77
    expression_and  go to state 78
    term            go to state 79
    factor          go to state 80
    arithmetic      go to state 81
    multdiv         go to state 82
    final           go to state 83


State 77

   70 other_than_if: expression . SEMI

    SEMI  shift, and go to state 138


State 78

   74 expression: expression_and . AND_AND expression
   75           | expression_and . OR_OR expression
   76           | expression_and .

    AND_AND  shift, and go to state 139
    OR_OR    shift, and go to state 140

    $default  reduce using rule 76 (expression)


State 79

   77 expression_and: term . EEQ expression_and
   78               | term . NEQ expression_and
   79               | term .

    NEQ  shift, and go to state 141
    EEQ  shift, and go to state 142

    $default  reduce using rule 79 (expression_and)


State 80

   80 term: factor .
   81     | factor . LEQ term
   82     | factor . GRQ term
   83     | factor . GR term
   84     | factor . LE term

    LE   shift, and go to state 143
    LEQ  shift, and go to state 144
    GR   shift, and go to state 145
    GRQ  shift, and go to state 146

    $default  reduce using rule 80 (term)


State 81

   85 factor: arithmetic .
   86       | arithmetic . MINUS factor

    MINUS  shift, and go to state 147
